--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNxjoKBf3NV7K4yJ6A/lnly",
+      "authorship_tag": "ABX9TyPVco6gMrD+cAnajM9yqrtA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,8 @@
         "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
         "\n",
         "# Use only one feature - in the case 'age'\n",
-        "diabetes_X = diabetes_X[:, np.newaxis, 0]\n",
+        "#For Assignment 2, comment out the line below\n",
+        "#diabetes_X = diabetes_X[:, np.newaxis, 0]\n",
         "\n",
         "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
@@ -299,7 +300,10 @@
       },
       "source": [
         "# Plot outputs\n",
-        "plt.plot(X_test[:][0],regr.intercept_ + regr.coef_[0]*X_test[0], color='red')\n",
+        "plt.figure(figsize=[10,10]) \n",
+        "for i in range(9):\n",
+        "  plt.plot(X_test[:][i],regr.intercept_ + regr.coef_[i]*X_test[i], color='red')\n",
+        " \n",
         "plt.scatter(X_test[:,0],y_test, color='blue')\n",
         "plt.xticks()\n",
         "plt.xlabel(\"X_test\")\n",
