--- a/LinearRegression3.ipynb
+++ b/LinearRegression3.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPGJGGU7zi4WPa5UXAaRoCo",
+      "authorship_tag": "ABX9TyOD6qAaJr4UwQtTkzl/u8ka",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "id": "tRzlhKQbRe_t"
       },
       "source": [
-        "**Imoprt Libraries**"
+        "**Import Libraries**"
       ]
     },
     {
@@ -120,7 +120,7 @@
         "id": "HGfq6OSlCa3n"
       },
       "source": [
-        "print(dataset.columns)\n"
+        "print(dataset.columns)"
       ],
       "execution_count": null,
       "outputs": []
@@ -360,6 +360,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MyJHXR0lIWnC"
+      },
+      "source": [
+        "Substitute 'first col' and 'second col' for the columns that you have selected"
+      ]
     },
     {
       "cell_type": "code",
