--- a/Logistic_Regression_NB1.ipynb
+++ b/Logistic_Regression_NB1.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression NB1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNvqjzQSm6LJ2VnUmkoGuCv",
+      "authorship_tag": "ABX9TyOblNgHHViUz/w7iJocHu9j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
       },
       "source": [
         "**Make Sythnetic Data**<br>\n",
-        "300 samples<br>[link text](https://)\n",
+        "300 samples<br>\n",
         "2 classes<br>\n",
         "This data set is the perfect data set for logistic regression.\n",
         "Train the model with this data set. \n",
@@ -122,7 +122,8 @@
         "id": "zwEuTOCaqDtX"
       },
       "source": [
-        "**Split the data into training and tests sets**"
+        "**Split the data into training and tests sets**\n",
+        "Randomly select 80% of the data points to be used for training the model. The rest will be used for testing the model. "
       ]
     },
     {
@@ -291,7 +292,7 @@
         "```\n",
         "Copy this above code and use this code to create a new data set. \n",
         "You'll notice this data set has 2 classes but they are not necessarily clearly separated classes. \n",
-        "How does the model behave now?\n",
+        "How will the model behave now?\n",
         "\n"
       ]
     },
