--- a/Logistic_Regression_NB3.ipynb
+++ b/Logistic_Regression_NB3.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression NB3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP5w0M5FYzhvTcTuPj3oej/",
+      "authorship_tag": "ABX9TyMrmhskJNbshWBq6MhJaUxX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,18 @@
         "id": "p8Q7ulDCjBH7"
       },
       "source": [
-        "# **Logistic Regression on a small sample of the MNIST dataset**\n"
+        "# **Logistic Regression on a small sample of the MNIST dataset**\n",
+        "This notebook uses SciKit Learn's logistic regression model on the the MNIST dataset of handwritten digits. <br>\n",
+        "The model will divide the data into 10 classifications (digits 0-9)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q1MK9_kM4gzu"
+      },
+      "source": [
+        "Import the libraries"
       ]
     },
     {
@@ -57,7 +68,8 @@
         "id": "JHvxEXANM_Ka"
       },
       "source": [
-        "**Get the data**"
+        "**Get the data**\n",
+        "The data is images of hand written digits.  This is a dataset from the sklearn datasets.  "
       ]
     },
     {
@@ -73,6 +85,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-6CjPVCk4zpq"
+      },
+      "source": [
+        "There are 1797 images and each is 8*8 pixels. \n",
+        "There are 1797 labels, one for each image."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "6F6rnmAjhIOz"
@@ -85,6 +107,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NC-_Iouu5Fzr"
+      },
+      "source": [
+        "Let's look at some of the images. \n",
+        "You will see they are heavily pixelated. The images are digits 0 - 4"
+      ]
     },
     {
       "cell_type": "code",
@@ -107,7 +139,8 @@
         "id": "roMUJYFrNdC1"
       },
       "source": [
-        "**Training - Test Data split**"
+        "**Training - Test Data split**\n",
+        "The data is split into 75% for training and 25% for testing. "
       ]
     },
     {
@@ -127,7 +160,9 @@
         "id": "to6XljqBNTwX"
       },
       "source": [
-        "**Create the model**"
+        "**Create the model**\n",
+        "We are using a classic logistic regression model. \n",
+        "In the SciKit library we can modify the parameters for the model. In this instance we will be using the defaults. "
       ]
     },
     {
@@ -148,8 +183,8 @@
         "id": "GC0TQWILZL7E"
       },
       "source": [
-        "print(x_train.shape)\n",
-        "print(y_train.shape)"
+        "print(\"training shape: \",x_train.shape)\n",
+        "print(\"label shape: \", y_train.shape)"
       ],
       "execution_count": null,
       "outputs": []
