--- a/Logistic_Regression_NB3.ipynb
+++ b/Logistic_Regression_NB3.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression NB3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMrmhskJNbshWBq6MhJaUxX",
+      "authorship_tag": "ABX9TyNLhpaQNDNtCgZJNtdgnRdI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,6 +55,7 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn import preprocessing\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "from sklearn import metrics"
@@ -172,7 +173,12 @@
       },
       "source": [
         "# all parameters not specified are set to their defaults\n",
-        "logisticRegr = LogisticRegression()"
+        "logisticRegr = LogisticRegression(fit_intercept=True,\n",
+        "                        multi_class='auto',\n",
+        "                        penalty='l2', #ridge regression\n",
+        "                        solver='saga',\n",
+        "                        max_iter=10000,\n",
+        "                        C=50)"
       ],
       "execution_count": null,
       "outputs": []
@@ -195,7 +201,8 @@
         "id": "qkzp--q3NXU-"
       },
       "source": [
-        "**Train the model**"
+        "**Train the model**<br>\n",
+        "Train the model on the training images and the training labels. "
       ]
     },
     {
@@ -215,7 +222,33 @@
         "id": "Dq8b27fZNim7"
       },
       "source": [
-        "**Make predictions with the trained model**"
+        "**Make predictions with the trained model**\n",
+        "Let's test the model by giving it one test case x_test[0]<br>\n",
+        "As you can see from the images below, it looks like this is the digit '2'. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WYJ0bebv9pKs"
+      },
+      "source": [
+        "plt.figure(figsize=(20,4))\n",
+        "for index, (image, label) in enumerate(zip(x_test[0:9], digits.target[0:9])):\n",
+        " plt.subplot(1, 10, index + 1)\n",
+        " plt.imshow(np.reshape(image, (8,8)), cmap=plt.cm.gray)\n",
+        " plt.title('Training: %i\\n' % label, fontsize = 20)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FPPJ30Vy-K3F"
+      },
+      "source": [
+        "The model predicts x_test[0] is a '2'"
       ]
     },
     {
@@ -237,7 +270,9 @@
         "id": "dTgZiuG5Nr0a"
       },
       "source": [
-        "**Make multiple predictions**"
+        "**Make multiple predictions**<br>\n",
+        "Have the model make predictions on the first 10 images in the test set.<br>\n",
+        "Compare the predictions to the images, is the model predicting accurately?\n"
       ]
     },
     {
@@ -299,7 +334,14 @@
         "id": "sEqV-CxiOB-x"
       },
       "source": [
-        "**The confusion matrix for the digits**"
+        "**The confusion matrix for the digits**<br>\n",
+        "The confusion matrix is shown below. <br>\n",
+        "This is a matrix for 10 classes. <br>\n",
+        "The diagonal from upper left to lower right is for the number of each class that the model predicted correctly. <br>\n",
+        "For example:<br>\n",
+        "In the first row there is a 37. This means the model got 37 images of handwritten '0's predicted correctly. The rest of the row has '0's. This means it did not mislabel any of the '0' as other digits. <br>\n",
+        "The second row has a '40' in the diagonal. This means the model predicted 40 handwritten '1's correctly. It also predicted 2 images of '1's as '8's and 1 image of '1' as a '9'. <br>\n",
+        "Each row corresponds to a class and how many were correctly indentified and how many were misidentified. "
       ]
     },
     {
@@ -349,15 +391,25 @@
         "index = 0\n",
         "misclassifiedIndexes = []\n",
         "misclassifiedIndexes2 = []\n",
+        "print(\"Gnd Truth, Prediction\")\n",
         "for label, predict in zip(y_test, predictions):\n",
         " if label != predict: \n",
-        "  print(label, predict)\n",
+        "  print(label, \"\\t\\t\", predict)\n",
         "  misclassifiedIndexes.append(label)\n",
         "  misclassifiedIndexes2.append(predict)\n",
         "  index +=1"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GNlugMEuBED0"
+      },
+      "source": [
+        "When we look at the images and their labels, how many would a human expert have gotten correct?"
+      ]
     },
     {
       "cell_type": "code",
