--- a/Logistic_Regression_NB3.ipynb
+++ b/Logistic_Regression_NB3.ipynb
@@ -6,7 +6,7 @@
       "name": "Logistic Regression NB3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNLhpaQNDNtCgZJNtdgnRdI",
+      "authorship_tag": "ABX9TyO+6VppJmo/2tP8R1jsZ6i7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -426,6 +426,17 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_kzWdWTYBeFS"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "1. Is this good data for logistic regression? Why or why not? \n",
+        "2. How can we make the model more accurate? "
+      ]
     }
   ]
 }
