--- a/LogReg_Titanic_NB4.ipynb
+++ b/LogReg_Titanic_NB4.ipynb
@@ -6,7 +6,7 @@
       "name": "LogReg Titanic NB4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNRjpsA+tf10ordEOx2sJuE",
+      "authorship_tag": "ABX9TyMyxiOVqcs4wcJWXxR9Np5H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/LogReg_Titanic_NB4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9CYLYrsXCRy6"
+      },
+      "source": [
+        "# Using Logistic Regression on the Titanic Dataset"
       ]
     },
     {
@@ -78,7 +87,15 @@
         "id": "MxaeZB9Rb5Kr"
       },
       "source": [
-        "**Load the Titanic dataset**"
+        "**Load the Titanic dataset**<br>\n",
+        "This is the dataset from the Titanic. <br>\n",
+        "It lists the following information: \n",
+        "Passenger Survived, Boarding Class (1,2,3)<br>\n",
+        "Passenger Name, Sex, Age<br>\n",
+        "Sibsp = number of siblings/spouses the passenger has on board<br>\n",
+        "Parch = number of parents/children the passenger has on board<br>\n",
+        "The passenger ticket number, fare paid, cabin number<br>\n",
+        "Where the passenger boarded the ship<br>"
       ]
     },
     {
@@ -117,6 +134,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vc-tc9XoLZdh"
+      },
+      "source": [
+        "Where are values missing in the data? Check both the train and test data<br>\n",
+        "What should be done about the missing data?<br>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "uJBUIX6RI3HD"
@@ -143,11 +170,32 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "LDAeuyJaFibt"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "Given the information about the dataset that you have so far, what features are important? Which can we drop? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6GbiAn4YGJlD"
+      },
+      "source": [
+        "# **Learning about the data**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "7qfMdQC6cHWZ"
       },
       "source": [
         "**Plot the data**<br>\n",
-        "Show age, sex, and who survived"
+        "Show age, sex, and who survived<br>\n",
+        "0 = not survived<br>\n",
+        "1 = survived"
       ]
     },
     {
@@ -172,7 +220,18 @@
         "id": "WkjEvu1McR4T"
       },
       "source": [
-        "**Drop columns that may not have an impact on survival rates**"
+        "**Drop columns that may not have an impact on survival rates**<br>\n",
+        "The passenger name and passenger ID have no impact on the survival rate. <br>\n",
+        "The ticket number also has no impact on survival rates. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dfrcZfrHL-CX"
+      },
+      "source": [
+        "**The embark column**"
       ]
     },
     {
@@ -194,21 +253,73 @@
         "id": "zUVPNmh2cjhs"
       },
       "source": [
-        "There are three places where people onboarded: S, C, Q"
+        "There are three places where people onboarded: S, C, Q<br>\n",
+        "S = SouthHampton, England<br>\n",
+        "C = Cherboug, France<br>\n",
+        "Q = Queenstown, Ireland<br>\n",
+        "<br>\n",
+        "Some of the data is missing from the embark column. What should we do about the missing data? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7EknkqX0HyJY"
+      },
+      "source": [
+        "One idea is to assume the missing values are from South Hampton, since this is the most largest embark group. "
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tazavANBI_s7"
+        "id": "DZ279K85HTJA"
       },
       "source": [
         "# only in titanic_df, fill the two missing values with the most occurred value, which is \"S\".\n",
-        "titanic_df[\"Embarked\"] = titanic_df[\"Embarked\"].fillna(\"S\")\n",
-        "\n",
+        "titanic_df[\"Embarked\"] = titanic_df[\"Embarked\"].fillna(\"S\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bGVlkBXRIKCP"
+      },
+      "source": [
+        "When we plot the survived vs embark, we see that those from South Hampton were least likely to survive. <br>\n",
+        "Since we used South Hampton for the missing data, how could this skew the data? "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q999M-ELIFkT"
+      },
+      "source": [
         "# plot\n",
-        "sns.factorplot('Embarked','Survived', data=titanic_df,size=4,aspect=3)\n",
-        "\n",
+        "sns.factorplot('Embarked','Survived', data=titanic_df,size=4,aspect=3)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1mKvRvjhJxtM"
+      },
+      "source": [
+        "Plotting all three embark locations by the number of passengers that boarded, the number that survived, and the percent of survival, we see South Hampton had the lowest survival rate. <br>\n",
+        "Why?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1tg2xOFGI3xU"
+      },
+      "source": [
         "fig, (axis1,axis2,axis3) = plt.subplots(1,3,figsize=(15,5))\n",
         "\n",
         "# sns.factorplot('Embarked',data=titanic_df,kind='count',order=['S','C','Q'],ax=axis1)\n",
@@ -218,14 +329,43 @@
         "\n",
         "# group by embarked, and get the mean for survived passengers for each value in Embarked\n",
         "embark_perc = titanic_df[[\"Embarked\", \"Survived\"]].groupby(['Embarked'],as_index=False).mean()\n",
-        "sns.barplot(x='Embarked', y='Survived', data=embark_perc,order=['S','C','Q'],ax=axis3)\n",
+        "sns.barplot(x='Embarked', y='Survived', data=embark_perc,order=['S','C','Q'],ax=axis3)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JBPVGw5GKZRM"
+      },
+      "source": [
+        "What should we do about the embark column? \n",
+        "1. Consider Embarked column in predictions,\n",
+        "and remove \"S\" dummy variable, \n",
+        "and leave \"C\" & \"Q\", since they seem to have a good rate for Survival.\n",
         "\n",
-        "# Either to consider Embarked column in predictions,\n",
-        "# and remove \"S\" dummy variable, \n",
-        "# and leave \"C\" & \"Q\", since they seem to have a good rate for Survival.\n",
-        "\n",
-        "# OR, don't create dummy variables for Embarked column, just drop it, \n",
-        "# because logically, Embarked doesn't seem to be useful in prediction.\n",
+        "2. Don't create dummy variables for Embarked column, just drop it, \n",
+        "because logically, Embarked doesn't seem to be useful in prediction."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PZIcvDptKoQ_"
+      },
+      "source": [
+        "In this first instance, the column is dropped. <br>\n",
+        "As an experiment, uncomment the code below and don't drop the column. <br>\n",
+        "How does the change affect the model?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tazavANBI_s7"
+      },
+      "source": [
         "\n",
         "#embark_dummies_titanic  = pd.get_dummies(titanic_df['Embarked'])\n",
         "#embark_dummies_titanic.drop(['S'], axis=1, inplace=True)\n",
@@ -243,9 +383,30 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mxO77xbULJLW"
+      },
+      "source": [
+        "**The Fare column**<br>\n",
+        "There is a missing value in the fare column. <br>\n",
+        "What should be done about it?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wNer4bNdNEhA"
+      },
+      "source": [
+        "In this case the missing fare is filled with the mean of the fares. <br>\n",
+        "The fare data is binned to help the model with predictions. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "R1EnQzDJJD4r"
+        "id": "48UDIIBFM7h-"
       },
       "source": [
         "# Fare\n",
@@ -266,13 +427,92 @@
         "std_fare      = DataFrame([fare_not_survived.std(), fare_survived.std()])\n",
         "\n",
         "# plot\n",
-        "titanic_df['Fare'].plot(kind='hist', figsize=(15,3),bins=100, xlim=(0,50))\n",
-        "\n",
-        "avgerage_fare.index.names = std_fare.index.names = [\"Survived\"]\n",
-        "avgerage_fare.plot(yerr=std_fare,kind='bar',legend=False)"
+        "fig = titanic_df['Fare'].plot(kind='hist', figsize=(15,3),bins=100, xlim=(0,100))\n",
+        "fig.set_xlabel(\"Binned Fares\")"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R1EnQzDJJD4r"
+      },
+      "source": [
+        "avgerage_fare.index.names = std_fare.index.names = [\"Survived\"]\n",
+        "fig2 = avgerage_fare.plot(yerr=std_fare,kind='bar',legend=False)\n",
+        "fig2.set_ylabel(\"Std fare\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xlfqvLtLPfn8"
+      },
+      "source": [
+        "**Age Column**<br>\n",
+        "The age column is missing a lot of values. <br>\n",
+        "What should be done about the missing data?\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "52R-HD2uQAq6"
+      },
+      "source": [
+        "# get average, std, and number of NaN values in titanic_df\n",
+        "average_age_titanic   = titanic_df[\"Age\"].mean()\n",
+        "std_age_titanic       = titanic_df[\"Age\"].std()\n",
+        "count_nan_age_titanic = titanic_df[\"Age\"].isnull().sum()\n",
+        "print(\"Ave training age: \", average_age_titanic)\n",
+        "print(\"Std training age: \",std_age_titanic)\n",
+        "print(\"Num of missing age training values: \", count_nan_age_titanic)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "J9rIkIxsQa8X"
+      },
+      "source": [
+        "# get average, std, and number of NaN values in test_df\n",
+        "average_age_test   = test_df[\"Age\"].mean()\n",
+        "std_age_test       = test_df[\"Age\"].std()\n",
+        "count_nan_age_test = test_df[\"Age\"].isnull().sum()\n",
+        "print(\"Ave test age: \", average_age_test)\n",
+        "print(\"Std test age: \",std_age_test)\n",
+        "print(\"Num of missing age test values: \", count_nan_age_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lQv3QdzGQv-0"
+      },
+      "source": [
+        "# generate random numbers between (mean - std) & (mean + std)\n",
+        "rand_1 = np.random.randint(average_age_titanic - std_age_titanic, average_age_titanic + std_age_titanic, size = count_nan_age_titanic)\n",
+        "rand_2 = np.random.randint(average_age_test - std_age_test, average_age_test + std_age_test, size = count_nan_age_test)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XXXIXF-iREbh"
+      },
+      "source": [
+        "Plot the ages using bins <br>\n",
+        "Drop all the rows missing data. "
+      ]
     },
     {
       "cell_type": "code",
@@ -284,20 +524,6 @@
         "fig, (axis1,axis2) = plt.subplots(1,2,figsize=(15,4))\n",
         "axis1.set_title('Original Age values - Titanic')\n",
         "axis2.set_title('New Age values - Titanic')\n",
-        "\n",
-        "# get average, std, and number of NaN values in titanic_df\n",
-        "average_age_titanic   = titanic_df[\"Age\"].mean()\n",
-        "std_age_titanic       = titanic_df[\"Age\"].std()\n",
-        "count_nan_age_titanic = titanic_df[\"Age\"].isnull().sum()\n",
-        "\n",
-        "# get average, std, and number of NaN values in test_df\n",
-        "average_age_test   = test_df[\"Age\"].mean()\n",
-        "std_age_test       = test_df[\"Age\"].std()\n",
-        "count_nan_age_test = test_df[\"Age\"].isnull().sum()\n",
-        "\n",
-        "# generate random numbers between (mean - std) & (mean + std)\n",
-        "rand_1 = np.random.randint(average_age_titanic - std_age_titanic, average_age_titanic + std_age_titanic, size = count_nan_age_titanic)\n",
-        "rand_2 = np.random.randint(average_age_test - std_age_test, average_age_test + std_age_test, size = count_nan_age_test)\n",
         "\n",
         "# plot original Age values\n",
         "# NOTE: drop all null values, and convert to int\n",
@@ -331,8 +557,17 @@
         "facet = sns.FacetGrid(titanic_df, hue=\"Survived\",aspect=4)\n",
         "facet.map(sns.kdeplot,'Age',shade= True)\n",
         "facet.set(xlim=(0, titanic_df['Age'].max()))\n",
-        "facet.add_legend()\n",
-        "\n",
+        "facet.add_legend()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tMVVmA1GRu6T"
+      },
+      "source": [
         "# average survived passengers by age\n",
         "fig, axis1 = plt.subplots(1,1,figsize=(18,4))\n",
         "average_age = titanic_df[[\"Age\", \"Survived\"]].groupby(['Age'],as_index=False).mean()\n",
