--- a/LogReg_Titanic_NB4.ipynb
+++ b/LogReg_Titanic_NB4.ipynb
@@ -6,7 +6,7 @@
       "name": "LogReg Titanic NB4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMyxiOVqcs4wcJWXxR9Np5H",
+      "authorship_tag": "ABX9TyPo938zOKguJs7HCcOgnzRh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,6 +577,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fCfsnapjSNuF"
+      },
+      "source": [
+        "**The cabin column**<br>\n",
+        "The cabin column is missing a lot of data. <br>\n",
+        "Drop the cabin column. "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "IsCVmM1tJPaY"
@@ -589,6 +600,21 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6V5J5ZBOSYPT"
+      },
+      "source": [
+        "**The SibSp and ParCh columns**<br>\n",
+        "The family columns have data about who was on board with their spouses, children, parents, siblings. <br>\n",
+        "We can simplify the data by saying just saying of a passenger was with a family member or not. <br>\n",
+        "Create a new column called family.<br>\n",
+        "1 = with sibling or spouse<br>\n",
+        "1 = with parent or child<br>\n",
+        "Drop the SibSp and Parch columns"
+      ]
     },
     {
       "cell_type": "code",
@@ -611,8 +637,26 @@
         "\n",
         "# drop Parch & SibSp\n",
         "titanic_df = titanic_df.drop(['SibSp','Parch'], axis=1)\n",
-        "test_df    = test_df.drop(['SibSp','Parch'], axis=1)\n",
-        "\n",
+        "test_df    = test_df.drop(['SibSp','Parch'], axis=1)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JkRvdvvbTjd3"
+      },
+      "source": [
+        "**Plot the new family column**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qTso6-rPTS_r"
+      },
+      "source": [
         "# plot\n",
         "fig, (axis1,axis2) = plt.subplots(1,2,sharex=True,figsize=(10,5))\n",
         "\n",
@@ -629,9 +673,34 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AAAqsmHpTozD"
+      },
+      "source": [
+        "**The Sex column**<br>\n",
+        "We can guess that the sex of the passenger is important because of the tradition of women and children first in the lifeboats. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "39LEiBClT5h-"
+      },
+      "source": [
+        "Let's consider all passengers under the age of 16 to be children. All over 16 to be adults. <br>\n",
+        "Let's create a new column called Person. <br>\n",
+        "Person will have three values: <br>\n",
+        "males<br>\n",
+        "females<br>\n",
+        "children<br>\n",
+        "Drop the sex column"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "EWlYoRpOJWTf"
+        "id": "r35Wdf7aUXf6"
       },
       "source": [
         "# Sex\n",
@@ -647,9 +716,31 @@
         "\n",
         "# No need to use Sex column since we created Person column\n",
         "titanic_df.drop(['Sex'],axis=1,inplace=True)\n",
-        "test_df.drop(['Sex'],axis=1,inplace=True)\n",
-        "\n",
-        "# create dummy variables for Person column, & drop Male as it has the lowest average of survived passengers\n",
+        "test_df.drop(['Sex'],axis=1,inplace=True)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2cA9HjAHUxYK"
+      },
+      "source": [
+        "Let's create new columns: <br>\n",
+        "Child<br>\n",
+        "Female (this column records both female and male)<br> \n",
+        "Drop the Person column"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EWlYoRpOJWTf"
+      },
+      "source": [
+        "# create dummy variables for Person column, & \n",
+        "# drop Male as it has the lowest average of survived passengers\n",
         "person_dummies_titanic  = pd.get_dummies(titanic_df['Person'])\n",
         "person_dummies_titanic.columns = ['Child','Female','Male']\n",
         "person_dummies_titanic.drop(['Male'], axis=1, inplace=True)\n",
@@ -675,6 +766,41 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "duMEEfiCV-gS"
+      },
+      "source": [
+        "What columns do we have now?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TsDN99XqVt32"
+      },
+      "source": [
+        "titanic_df.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cyVEsWc7WCOI"
+      },
+      "source": [
+        "**The Pclass column**<br>\n",
+        "Use one-hot encoding to contain the information about the passenger classes. <br>\n",
+        "We can use three columns or two columns for this information<br>\n",
+        "We will use two columns:<br>\n",
+        "Class 1<br>\n",
+        "Class 2 and 3<br>\n",
+        "Drop the PClass column"
+      ]
     },
     {
       "cell_type": "code",
@@ -708,11 +834,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "YiiN1ak2WYWX"
+      },
+      "source": [
+        "titanic_df.columns"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rESkJyNuXAxX"
+      },
+      "source": [
+        "print(titanic_df.value_counts('Class_1'))\n",
+        "print(titanic_df.value_counts('Class_2'))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "l9-5P45DJcCf"
       },
       "source": [
         "# define training and testing sets\n",
-        "\n",
         "X_train = titanic_df.drop(\"Survived\",axis=1)\n",
         "Y_train = titanic_df[\"Survived\"]\n",
         "X_test  = test_df.drop(\"PassengerId\",axis=1).copy()\n"
