--- a/LogReg_Titanic_NB4.ipynb
+++ b/LogReg_Titanic_NB4.ipynb
@@ -6,7 +6,7 @@
       "name": "LogReg Titanic NB4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPo938zOKguJs7HCcOgnzRh",
+      "authorship_tag": "ABX9TyO7Xwfwrzv0ZDcGWcg66uA/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -855,6 +855,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uYRT0A3hXpoW"
+      },
+      "source": [
+        "**Remove the labels from the training set**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "l9-5P45DJcCf"
@@ -999,6 +1008,19 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Wg9gEZnMYE8M"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "What else can we do with this data? <br>\n",
+        "Can we get the model more accurate? <br>\n",
+        "What if we drop the fare column? <br>\n",
+        "What if we change the training/test ratio?<br>"
+      ]
     }
   ]
 }
