--- a/LogReg_Titanic_NB4.ipynb
+++ b/LogReg_Titanic_NB4.ipynb
@@ -6,7 +6,7 @@
       "name": "LogReg Titanic NB4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyO7Xwfwrzv0ZDcGWcg66uA/",
+      "authorship_tag": "ABX9TyO77K2be/AXLhc6A8IShX4r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,9 @@
         "id": "9CYLYrsXCRy6"
       },
       "source": [
-        "# Using Logistic Regression on the Titanic Dataset"
+        "# Using Logistic Regression on the Titanic Dataset\n",
+        "This notebook imports the Titanic dataset then *spends quite a bit of time examining the data and deciding what to do about missing data*. <br>\n",
+        "Then the sklearn Logistic Regression model is used to make predictions on the test data. "
       ]
     },
     {
