--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMy9R74zc3pwrD3bm0qcrtw",
+      "authorship_tag": "ABX9TyMT2yG895yZh05Yxph6alIO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,7 +68,8 @@
       },
       "source": [
         "**Create some synthetic data**<br>\n",
-        "This synthetic data is designed for linear regression models, so we expect a high accuracy score"
+        "This synthetic data is designed for linear regression models, so we expect a high accuracy score<br>\n",
+        "Check this link for more information on [creating synthetic data](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_regression.html)"
       ]
     },
     {
@@ -77,7 +78,7 @@
         "id": "5edad6a1WEMI"
       },
       "source": [
-        "X,y = make_regression(n_samples=800, n_features=2, random_state=1, noise=0.9,bias=3.5)\n",
+        "X,y = make_regression(n_samples=800, n_features=2, random_state=1, noise=0,bias=3.5)\n",
         "#X_train\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "X_train.shape"
@@ -166,10 +167,10 @@
         "id": "UGRmxr7dZUbD"
       },
       "source": [
-        "print(reg.coef_)\n",
-        "print(reg.intercept_)\n",
+        "print(\"The coefficents =\", reg.coef_)\n",
+        "print(\"The y intercept = \",reg.intercept_)\n",
         "#print(reg.predict(X_test))\n",
-        "print(reg.score(X_test, y_test))"
+        "print(\"Score = \", reg.score(X_test, y_test))"
       ],
       "execution_count": null,
       "outputs": []
@@ -213,6 +214,8 @@
         "#assign x two values,-3 and 3\n",
         "x_vals = (-3,3)\n",
         "#use the x_values to calc the y_valyes\n",
+        "#for Assignment 2 change reg.coef_ to\n",
+        "#reg.coef_[0:1] \n",
         "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
         "#plot the line using the x and y values\n",
         "plt.plot(x_vals, y_vals, color='red')\n",
@@ -232,6 +235,29 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Tbn4SFy8cI5E"
+      },
+      "source": [
+        "**Assignment 1**<br>\n",
+        "In the synthetic data, change the noise to 0.9 <br>\n",
+        "What impact does 90% noise have on the score? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HGGibDxHc4Y1"
+      },
+      "source": [
+        "**Assignment 2**<br>\n",
+        "Increase the number of features to 100. <br>\n",
+        "You will also need to change the code in the last plot.<br>\n",
+        "Why are there so many coefficients? How many are there?<br>\n"
+      ]
     }
   ]
 }
