--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMT2yG895yZh05Yxph6alIO",
+      "authorship_tag": "ABX9TyNhAZ2e+ObgPhwCpGeOFoJg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -245,6 +245,16 @@
         "**Assignment 1**<br>\n",
         "In the synthetic data, change the noise to 0.9 <br>\n",
         "What impact does 90% noise have on the score? "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qDIPZvXgfSmq"
+      },
+      "source": [
+        "**Assignment 1b**<br>\n",
+        "What is the smallest data set you can use to get a score greater than 95% ?"
       ]
     },
     {
