--- a/LinearRegression3.ipynb
+++ b/LinearRegression3.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOD6qAaJr4UwQtTkzl/u8ka",
+      "authorship_tag": "ABX9TyPWn5jw48Bhfw35m6+wO1sF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -346,6 +346,17 @@
       "source": [
         "dataset.columns\n",
         "#Chose any two columns for example Temp9am and Temp3pm"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1hqClxWZgXss"
+      },
+      "source": [
+        "dataset.dtypes"
       ],
       "execution_count": null,
       "outputs": []
