--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPVco6gMrD+cAnajM9yqrtA",
+      "authorship_tag": "ABX9TyMErhdGjXPJe2h7zsndo+dg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -245,15 +245,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nhpP-8hiCPBR"
+        "id": "Kmp844n1ikSm"
       },
       "source": [
-        "# Plot outputs\n",
-        "plt.plot(X_test,y_pred, color='red')\n",
+        "#assign x two values,-3 and 3\n",
+        "x_vals = (-.2,.2)\n",
+        "y_vals = regr.intercept_ + regr.coef_[0:1] * x_vals\n",
+        "#plot the line using the x and y values\n",
+        "plt.plot(x_vals, y_vals, color='red')\n",
         "plt.scatter(X_test[:,0],y_test, color='blue')\n",
-        "plt.xticks()\n",
-        "plt.xlabel(\"X_test\")\n",
-        "plt.ylabel(\"y_test\")\n",
         "plt.show()"
       ],
       "execution_count": null,
