--- a/LinearRegression2.ipynb
+++ b/LinearRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMErhdGjXPJe2h7zsndo+dg",
+      "authorship_tag": "ABX9TyNvJkfaZ6f9e820WE2iSAAD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,8 +104,9 @@
         "diabetes_X, diabetes_y = datasets.load_diabetes(return_X_y=True)\n",
         "\n",
         "# Use only one feature - in the case 'age'\n",
+        "#For assignment 1, change the 0 to another column\n",
         "#For Assignment 2, comment out the line below\n",
-        "#diabetes_X = diabetes_X[:, np.newaxis, 0]\n",
+        "diabetes_X = diabetes_X[:, np.newaxis, 0]\n",
         "\n",
         "#split into train and test datasets\n",
         "X_train, X_test, y_train, y_test = train_test_split(diabetes_X, diabetes_y, test_size=0.2, random_state=0)\n",
