--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNhAZ2e+ObgPhwCpGeOFoJg",
+      "authorship_tag": "ABX9TyMAY0VMg2O0WrDsk9k3dzNq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,6 +255,15 @@
       "source": [
         "**Assignment 1b**<br>\n",
         "What is the smallest data set you can use to get a score greater than 95% ?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fSGZIv-6hKWC"
+      },
+      "source": [
+        "**Do not do Assignment 2 until later in the class**"
       ]
     },
     {
