--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMAY0VMg2O0WrDsk9k3dzNq",
+      "authorship_tag": "ABX9TyPlhjz8C/IDtWldJE8iQMl6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -213,9 +213,12 @@
       "source": [
         "#assign x two values,-3 and 3\n",
         "x_vals = (-3,3)\n",
-        "#use the x_values to calc the y_valyes\n",
-        "#for Assignment 2 change reg.coef_ to\n",
-        "#reg.coef_[0:1] \n",
+        "#use the x_values to calc the y_values\n",
+        "\n",
+        "#for Assignment 2 \n",
+        "#for i in range(9):\n",
+        "#  plt.plot(X_test[:][i],reg.intercept_ + reg.coef_[i]*X_test[i], color='red')\n",
+        "\n",
         "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
         "#plot the line using the x and y values\n",
         "plt.plot(x_vals, y_vals, color='red')\n",
