--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPlhjz8C/IDtWldJE8iQMl6",
+      "authorship_tag": "ABX9TyM2WMbhXTLtpN66ekotzkSH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -215,11 +215,12 @@
         "x_vals = (-3,3)\n",
         "#use the x_values to calc the y_values\n",
         "\n",
-        "#for Assignment 2 \n",
+        "#for Assignment 2 uncomment the for loop\n",
         "#for i in range(9):\n",
         "#  plt.plot(X_test[:][i],reg.intercept_ + reg.coef_[i]*X_test[i], color='red')\n",
-        "\n",
+        "#for Assignment 2 comment out the following line\n",
         "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
+        "\n",
         "#plot the line using the x and y values\n",
         "plt.plot(x_vals, y_vals, color='red')\n",
         "plt.scatter(X_test[:,0],y_test, color='blue')\n",
