--- a/LinearRegression1.ipynb
+++ b/LinearRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "LinearRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM2WMbhXTLtpN66ekotzkSH",
+      "authorship_tag": "ABX9TyMJHq5zRx6+G3zK/NFB4Guy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,8 @@
         "from sklearn.datasets import make_regression\n",
         "from sklearn.preprocessing import Normalizer\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.linear_model import LinearRegression"
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn import metrics"
       ],
       "execution_count": null,
       "outputs": []
@@ -78,7 +79,7 @@
         "id": "5edad6a1WEMI"
       },
       "source": [
-        "X,y = make_regression(n_samples=800, n_features=2, random_state=1, noise=0,bias=3.5)\n",
+        "X,y = make_regression(n_samples=800, n_features=10, random_state=1, noise=0,bias=3.5)\n",
         "#X_train\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
         "X_train.shape"
@@ -164,13 +165,24 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ai7qAMTGALKh"
+      },
+      "source": [
+        "print('Mean Absolute Error:', metrics.mean_absolute_error(y_test, y_pred))  \n",
+        "print('Mean Squared Error:', metrics.mean_squared_error(y_test, y_pred))  \n",
+        "print('Root Mean Squared Error:', np.sqrt(metrics.mean_squared_error(y_test, y_pred)))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "UGRmxr7dZUbD"
       },
       "source": [
         "print(\"The coefficents =\", reg.coef_)\n",
-        "print(\"The y intercept = \",reg.intercept_)\n",
-        "#print(reg.predict(X_test))\n",
-        "print(\"Score = \", reg.score(X_test, y_test))"
+        "print(\"The y intercept = \",reg.intercept_)"
       ],
       "execution_count": null,
       "outputs": []
@@ -222,20 +234,8 @@
         "y_vals = reg.intercept_ + reg.coef_ * x_vals\n",
         "\n",
         "#plot the line using the x and y values\n",
-        "plt.plot(x_vals, y_vals, color='red')\n",
         "plt.scatter(X_test[:,0],y_test, color='blue')\n",
         "plt.show()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RhgwixuxhZhG"
-      },
-      "source": [
-        "print(y_vals)"
       ],
       "execution_count": null,
       "outputs": []
